feat(qutebrowser): auto English layout for command modes
- Add switch-to-english userscript (3 lines, uses im-select)
- Add en() helper function for clean key binding syntax
- Override key bindings for command/prompt modes to auto-switch to English layout
- Covers: command mode (:), search (/,?), tab opening (t), URL editing (ge),
  tab selection (Space+Space), session management, and settings prompts
- Similar to Neovim's InsertLeave behavior but for qutebrowser command modes

--- a/glance/glance.yml
+++ b/glance/glance.yml
@@ -32,6 +32,8 @@ pages:
           - type: videos
             channels:
               - UCYeiozh-4QwuC1sjgCmB92w # DevOps Toolbox
+              - UC_NZ6qLS9oJgsMKQhqAkg-w # Josean Martinez
+              - UCo71RUe6DX4w-Vd47rFLXPg # typecraft
               - UCxa8XPOhu4iA6Lon71TJ0rg # Ampersand
               - UCo71RUe6DX4w-Vd47rFLXPg # typecraft
               - UCYvMQ4fBOX2kwfJ981cZSPg # proLinux
