feat(tmux): auto switch layout on prefix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,11 +38,37 @@ set -g @plugin 'arcticicestudio/nord-tmux'
 set -g status-left-length 60
 set -g status-left '#[fg=#2E3440,bg=#81A1C1,nobold] #S #[fg=#81A1C1,bg=#3B4252,nobold]#[default]'
 
-# Bindigs
+# Bindings
 #
-set-option -g prefix C-a
-unbind-key C-b # Use Ctrl-a as the prefix instead of default Ctrl-b
-bind-key C-a send-prefix
+# Shared helper to switch layout to English; safe to run even if im-select is missing.
+set -g @switch_to_english_cmd "command -v im-select >/dev/null 2>&1 && im-select com.apple.keylayout.ABC >/dev/null 2>&1 || true"
+# Keep the prefix window open roughly as long as tmux's default prefix-timeout (1s).
+set -g @english_layout_prefix_timeout 1.5
+
+# Disable tmux's built-in prefix handler so we can run our own hook.
+set-option -g prefix None
+unbind-key C-b
+unbind-key C-a
+
+# Pressing prefix twice still sends a literal Ctrl+A to the pane.
+unbind-key -T prefix C-a
+bind-key   -T prefix C-a send-keys C-a
+
+# Custom prefix handler: switch to English and temporarily enter the prefix table.
+bind-key -n C-a run-shell "#{@switch_to_english_cmd}" \;\
+  switch-client -T prefix \;\
+  run-shell -b "sleep #{@english_layout_prefix_timeout} && tmux switch-client -c '#{client_name}' -T root"
+
+# Allow triggering the prefix from copy mode tables as well.
+bind-key -T copy-mode C-a send-keys -X cancel \;\
+  run-shell "#{@switch_to_english_cmd}" \;\
+  switch-client -T prefix \;\
+  run-shell -b "sleep #{@english_layout_prefix_timeout} && tmux switch-client -c '#{client_name}' -T root"
+
+bind-key -T copy-mode-vi C-a send-keys -X cancel \;\
+  run-shell "#{@switch_to_english_cmd}" \;\
+  switch-client -T prefix \;\
+  run-shell -b "sleep #{@english_layout_prefix_timeout} && tmux switch-client -c '#{client_name}' -T root"
 
 # Ctrl-a r to reload this config
 unbind r
@@ -56,8 +82,10 @@ set -g automatic-rename-format     '#{pane_current_command} /#{b:pane_current_pa
 bind-key X kill-session
 
 # When creating a new window or pane, automatically change to the directory of
-# the current window or pane.
-bind c new-window -c "#{pane_current_path}"
+# the current window or pane. Switching back to English right before prompts
+# avoids typing the window name in the wrong layout.
+bind c run-shell "#{@switch_to_english_cmd}" \;\
+        new-window -c "#{pane_current_path}"
 bind '=' split-window -c "#{pane_current_path}"
 bind Enter split-window -h -c "#{pane_current_path}"
 
@@ -128,7 +156,9 @@ unbind M
 bind M command-prompt -p "Pull from:" "join-pane -h -l 50% -s ':%1' -t :."
 
 # Bind F1..F12 (sent from kitty)
-bind-key -n F1 new-window -c "#{pane_current_path}"
+# Cmd+t → kitty sends F1, so switch to English before creating the new window.
+bind-key -n F1 run-shell "#{@switch_to_english_cmd}" \;\
+             new-window -c "#{pane_current_path}"
 bind-key -n F2 kill-pane
 bind-key -n F3 kill-window
 bind-key -n F4 split-window -h -c "#{pane_current_path}"
