--- a/codex/config.toml
+++ b/codex/config.toml
@@ -1,4 +1,4 @@
-model = "gpt-5.1-codex"
+model = "gpt-5.1-codex-max"
 model_reasoning_effort = "medium"
 
 [projects."/Users/tim/dev/dotfiles"]
@@ -25,9 +25,16 @@ trust_level = "trusted"
 [projects."/Users/tim/.config/opencode"]
 trust_level = "trusted"
 
+[projects."/Users/tim/dev/pet-new/hz-claude-code-web"]
+trust_level = "trusted"
+
+[projects."/Users/tim/dev/work/slidev"]
+trust_level = "untrusted"
+
 [mcp_servers.mcpproxy]
 type = "http"
 url = "http://localhost:8080/mcp/"
 
 [notice]
 hide_gpt5_1_migration_prompt = true
+"hide_gpt-5.1-codex-max_migration_prompt" = true
