--- a/mcpproxy/mcp_config.json
+++ b/mcpproxy/mcp_config.json
@@ -15,7 +15,7 @@
       "enabled": false,
       "quarantined": false,
       "created": "2025-10-21T19:04:57.9416+03:00",
-      "updated": "2025-10-31T13:44:57.597923+03:00"
+      "updated": "2025-11-18T15:07:15.854268+03:00"
     },
     {
       "name": "atlassian",
@@ -26,10 +26,10 @@
         "mcp-remote",
         "https://mcp.atlassian.com/v1/sse"
       ],
-      "enabled": true,
+      "enabled": false,
       "quarantined": false,
       "created": "2025-10-19T12:18:48.499107+03:00",
-      "updated": "2025-10-31T13:45:03.330906+03:00"
+      "updated": "2025-11-18T15:09:30.888827+03:00"
     },
     {
       "name": "context7",
@@ -42,7 +42,7 @@
       "enabled": false,
       "quarantined": false,
       "created": "2025-10-19T12:18:48.499107+03:00",
-      "updated": "2025-10-31T13:44:57.618337+03:00"
+      "updated": "2025-11-18T15:07:15.872461+03:00"
     },
     {
       "name": "fleur",
@@ -54,7 +54,7 @@
       "enabled": false,
       "quarantined": false,
       "created": "2025-10-19T12:18:48.499107+03:00",
-      "updated": "2025-10-31T13:44:57.626708+03:00"
+      "updated": "2025-11-18T15:07:15.885113+03:00"
     },
     {
       "name": "gitlab",
@@ -67,7 +67,7 @@
       "enabled": true,
       "quarantined": false,
       "created": "2025-10-19T12:18:48.499107+03:00",
-      "updated": "2025-10-31T13:44:57.637431+03:00"
+      "updated": "2025-11-18T15:07:15.893623+03:00"
     },
     {
       "name": "morphllm-fast-apply",
@@ -83,7 +83,7 @@
       "enabled": true,
       "quarantined": false,
       "created": "2025-10-19T12:18:48.499107+03:00",
-      "updated": "2025-10-31T13:44:57.647342+03:00"
+      "updated": "2025-11-18T15:07:15.90064+03:00"
     },
     {
       "name": "perplexity-mcp",
@@ -96,7 +96,7 @@
       "enabled": true,
       "quarantined": false,
       "created": "2025-10-19T12:18:48.499107+03:00",
-      "updated": "2025-10-31T13:44:57.657336+03:00"
+      "updated": "2025-11-18T15:07:15.908665+03:00"
     },
     {
       "name": "repomix",
@@ -110,7 +110,7 @@
       "enabled": false,
       "quarantined": false,
       "created": "2025-10-19T12:18:48.499107+03:00",
-      "updated": "2025-10-31T13:44:57.667305+03:00"
+      "updated": "2025-11-18T15:07:15.916582+03:00"
     },
     {
       "name": "sequential-thinking",
@@ -123,7 +123,7 @@
       "enabled": true,
       "quarantined": false,
       "created": "2025-10-19T12:18:48.499107+03:00",
-      "updated": "2025-10-31T13:44:57.677241+03:00"
+      "updated": "2025-11-18T15:07:15.923537+03:00"
     },
     {
       "name": "serena",
@@ -144,7 +144,20 @@
       "enabled": true,
       "quarantined": false,
       "created": "2025-10-19T12:18:48.499107+03:00",
-      "updated": "2025-10-31T13:44:57.69022+03:00"
+      "updated": "2025-11-18T15:07:15.93184+03:00"
+    },
+    {
+      "name": "shadcn-svelte-extras",
+      "protocol": "stdio",
+      "command": "npx",
+      "args": [
+        "jsrepo",
+        "mcp"
+      ],
+      "enabled": true,
+      "quarantined": false,
+      "created": "2025-11-16T14:48:58.981911+03:00",
+      "updated": "2025-11-18T15:07:15.940657+03:00"
     },
     {
       "name": "shrimp-task-manager",
@@ -161,7 +174,7 @@
       "enabled": false,
       "quarantined": false,
       "created": "2025-10-19T12:42:21.144894+03:00",
-      "updated": "2025-10-31T13:44:57.708275+03:00"
+      "updated": "2025-11-18T15:07:15.951686+03:00"
     },
     {
       "name": "sqvr-graphql",
@@ -179,7 +192,7 @@
       "enabled": true,
       "quarantined": false,
       "created": "2025-10-19T12:18:48.499107+03:00",
-      "updated": "2025-10-31T13:44:57.729326+03:00"
+      "updated": "2025-11-18T15:07:15.960371+03:00"
     }
   ],
   "top_k": 5,
@@ -368,5 +381,8 @@
     "enabled": true,
     "default_model": "gpt-4",
     "encoding": "cl100k_base"
-  }
+  },
+  "enable_code_execution": false,
+  "code_execution_timeout_ms": 120000,
+  "code_execution_pool_size": 10
 }
