--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -27,11 +27,10 @@ customCommands:
     command: |
       env TERM=xterm-256color bash -lc 'git diff --cached --no-ext-diff --color=always -- "{{.SelectedFile.Name}}" | git-split-diffs --color=16m | less -R'
 git:
-  paging:
-    colorArg: always
-    pager: git-split-diffs --color=16m
-    useConfigOnly: true
-
+  pagers:
+    - colorArg: always
+      pager: git-split-diffs --color=16m
+      useConfigOnly: true
 gui:
   theme:
     activeBorderColor:
