--- a/tweakcc/config.json
+++ b/tweakcc/config.json
@@ -1,7 +1,7 @@
 {
-  "ccVersion": "2.0.44",
+  "ccVersion": "2.0.55",
   "ccInstallationDir": "/Users/tim/.volta/tools/image/packages/@anthropic-ai/claude-code/lib/node_modules/@anthropic-ai/claude-code/",
-  "lastModified": "2025-11-20T19:31:38.510Z",
+  "lastModified": "2025-11-27T15:02:05.698Z",
   "changesApplied": true,
   "settings": {
     "themes": [
@@ -477,12 +477,6 @@
         }
       }
     ],
-    "launchText": {
-      "method": "figlet",
-      "figletText": "Claude Code",
-      "figletFont": "ANSI Shadow",
-      "customText": ""
-    },
     "thinkingVerbs": {
       "format": "{}… ",
       "verbs": [
@@ -749,6 +743,13 @@
     },
     "inputBox": {
       "removeBorder": true
-    }
+    },
+    "toolsets": [
+      {
+        "name": "New Toolset",
+        "allowedTools": []
+      }
+    ],
+    "defaultToolset": null
   }
 }
