Update qutebrowser headers

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,6 +2,7 @@ include ./nord.conf
 
 allow_remote_control yes
 allow_unsafe_paste yes
+kitty_mod ctrl+alt
 
 # Disable focus events to prevent [O and [I characters when switching apps
 enable_focus_reporting no
