--- a/codex/config.toml
+++ b/codex/config.toml
@@ -43,6 +43,12 @@ trust_level = "trusted"
 [projects."/Users/tim/dev/pet-new/rari-shadcnui"]
 trust_level = "trusted"
 
+[projects."/Users/tim/dev/pet-old/rnc-app"]
+trust_level = "trusted"
+
+[projects."/Users/tim"]
+trust_level = "untrusted"
+
 [mcp_servers.mcpproxy]
 type = "http"
 url = "http://localhost:8080/mcp/"
