chore(config): update trust levels for user project paths

--- a/codex/config.toml
+++ b/codex/config.toml
@@ -49,6 +49,9 @@ trust_level = "trusted"
 [projects."/Users/tim"]
 trust_level = "untrusted"
 
+[projects."/Users/tim/dev/pet-new/rackage"]
+trust_level = "trusted"
+
 [mcp_servers.mcpproxy]
 type = "http"
 url = "http://localhost:8080/mcp/"
