--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -2,11 +2,13 @@
   "$schema": "https://opencode.ai/config.json",
 
   "plugin": [
-    "opencode-openai-codex-auth@latest",
-    "@tarquinen/opencode-dcp@latest",
-    "@franlol/opencode-md-table-formatter@latest",
-    "opencode-antigravity-auth@1.2.0",
-    "@nick-vi/opencode-type-inject",
+    "opencode-openai-codex-auth@4.2.0",
+    "@tarquinen/opencode-dcp@1.0.4",
+    "@franlol/opencode-md-table-formatter@0.0.3",
+    "opencode-antigravity-auth@1.2.1",
+    "@zenobius/opencode-background@",
+    // "opencode-gemini-auth@1.3.4",
+    "@nick-vi/opencode-type-inject@1.3.1",
   ],
 
   // OpenAI provider + full GPT-5 model presets
@@ -342,88 +344,6 @@
             "textVerbosity": "high",
             "include": ["reasoning.encrypted_content"],
             "store": false,
-          },
-        },
-      },
-    },
-
-    "google": {
-      "models": {
-        "gemini-3-pro-high": {
-          "name": "Gemini 3 Pro High (Antigravity)",
-          "limit": {
-            "context": 1048576,
-            "output": 65535,
-          },
-          "modalities": {
-            "input": ["text", "image", "pdf"],
-            "output": ["text"],
-          },
-        },
-        "gemini-3-pro-low": {
-          "name": "Gemini 3 Pro Low (Antigravity)",
-          "limit": {
-            "context": 1048576,
-            "output": 65535,
-          },
-          "modalities": {
-            "input": ["text", "image", "pdf"],
-            "output": ["text"],
-          },
-        },
-        "gemini-3-flash": {
-          "name": "Gemini 3 Flash (Antigravity)",
-          "limit": {
-            "context": 1048576,
-            "output": 65536,
-          },
-          "modalities": {
-            "input": ["text", "image", "pdf"],
-            "output": ["text"],
-          },
-        },
-        "claude-sonnet-4-5": {
-          "name": "Claude Sonnet 4.5 (Antigravity)",
-          "limit": {
-            "context": 200000,
-            "output": 64000,
-          },
-          "modalities": {
-            "input": ["text", "image", "pdf"],
-            "output": ["text"],
-          },
-        },
-        "claude-sonnet-4-5-thinking": {
-          "name": "Claude Sonnet 4.5 Thinking (Antigravity)",
-          "limit": {
-            "context": 200000,
-            "output": 64000,
-          },
-          "modalities": {
-            "input": ["text", "image", "pdf"],
-            "output": ["text"],
-          },
-        },
-        "claude-opus-4-5-thinking": {
-          "name": "Claude Opus 4.5 Thinking (Antigravity)",
-          "limit": {
-            "context": 200000,
-            "output": 64000,
-          },
-          "modalities": {
-            "input": ["text", "image", "pdf"],
-            "output": ["text"],
-          },
-        },
-        "gpt-oss-120b-medium": {
-          "name": "GPT-OSS 120B Medium (Antigravity)",
-          "limit": {
-            "context": 131072,
-            "output": 32768,
-          },
-          "modalities": {
-            "input": ["text", "image", "pdf"],
-            "output": ["text"],
           },
         },
       },
