--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -2,13 +2,14 @@
   "$schema": "https://opencode.ai/config.json",
 
   "plugin": [
-    "opencode-openai-codex-auth@4.2.0",
-    "@tarquinen/opencode-dcp@1.0.4",
-    "@franlol/opencode-md-table-formatter@0.0.3",
-    "opencode-antigravity-auth@1.2.1",
-    "@zenobius/opencode-background@",
+    "oh-my-opencode",
+    "opencode-openai-codex-auth",
+    "opencode-antigravity-auth",
+    "@tarquinen/opencode-dcp",
+    "@franlol/opencode-md-table-formatter",
+    // "@zenobius/opencode-background",
     // "opencode-gemini-auth@1.3.4",
-    "@nick-vi/opencode-type-inject@1.3.1",
+    "@nick-vi/opencode-type-inject",
   ],
 
   // OpenAI provider + full GPT-5 model presets
@@ -344,6 +345,26 @@
             "textVerbosity": "high",
             "include": ["reasoning.encrypted_content"],
             "store": false,
+          },
+        },
+      },
+    },
+    "google": {
+      "models": {
+        "gemini-3-pro-high": {
+          "name": "Gemini 3 Pro High (Antigravity)",
+          "limit": { "context": 1048576, "output": 65535 },
+          "modalities": {
+            "input": ["text", "image", "pdf"],
+            "output": ["text"],
+          },
+        },
+        "claude-sonnet-4-5": {
+          "name": "Claude Sonnet 4.5 (Antigravity)",
+          "limit": { "context": 200000, "output": 64000 },
+          "modalities": {
+            "input": ["text", "image", "pdf"],
+            "output": ["text"],
           },
         },
       },
