--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -2,14 +2,14 @@
   "$schema": "https://opencode.ai/config.json",
 
   "plugin": [
-    "oh-my-opencode",
-    "opencode-openai-codex-auth",
-    "opencode-antigravity-auth",
-    "@tarquinen/opencode-dcp",
-    "@franlol/opencode-md-table-formatter",
+    "oh-my-opencode@2.4.6",
+    "opencode-openai-codex-auth@4.2.0",
+    "opencode-antigravity-auth@1.2.2",
+    "@tarquinen/opencode-dcp@1.0.4",
+    "@franlol/opencode-md-table-formatter@0.0.3",
     // "@zenobius/opencode-background",
     // "opencode-gemini-auth@1.3.4",
-    "@nick-vi/opencode-type-inject",
+    "@nick-vi/opencode-type-inject@1.3.1",
   ],
 
   // OpenAI provider + full GPT-5 model presets
