--- a/codex/config.toml
+++ b/codex/config.toml
@@ -62,3 +62,7 @@ hide_gpt5_1_migration_prompt = true
 
 [notice.model_migrations]
 "gpt-5.1-codex-max" = "gpt-5.2-codex"
+
+[features]
+unified_exec = true
+shell_snapshot = true
