chore(opencode): update oh my opencode

--- a/.gitignore
+++ b/.gitignore
@@ -2,22 +2,34 @@
 .idea
 .aider*
 !.aider.conf.yml
+
 zed/conversations
 zed/prompts
+
 .context
 repomix-output.xml
+
 codex/auth.json
 codex/log
 codex/sessions
 codex/history.jsonl
 codex/version.json
+codex/shell_snapshots
+codex/skills/.system
+
 mpv/watch_later
+
 fish/fishd.tmp*
+
 tweakcc/cli.js.backup
+
 karabiner/automatic_backups
+
 .gemini-clipboard
+
 mcpproxy/config.db
 mcpproxy/config.db.backup*
+
 __pycache__/
 qutebrowser/userscripts/qpw
 
