chore(various): update configs

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -79,7 +79,7 @@ map cmd+г send_key f12
 font_family ShureTechMono Nerd Font Mono
 
 # Cyrillic fallback (monospace)
-symbol_map U+0400-U+04FF JetBrainsMono Nerd Font Mono
+symbol_map U+0400-U+04FF Zenbones Mono
 
 # Nerd Font Symbols (PUA block)
 symbol_map U+E000-U+F8FF JetBrainsMono Nerd Font Mono
