--- a/opencode/opencode_1.jsonc
+++ b/opencode/opencode_1.jsonc
@@ -2,7 +2,7 @@
   "$schema": "https://opencode.ai/config.json",
 
   "plugin": [
-    "oh-my-opencode@2.14.0",
+    "oh-my-opencode@2.13.1",
     "opencode-openai-codex-auth@4.3.0",
     "opencode-antigravity-auth@1.2.7",
     "@franlol/opencode-md-table-formatter@0.0.3",
@@ -451,7 +451,7 @@
   },
 
   // Default model for OpenCode sessions
-  "model": "openai/gpt-5.2-medium",
+  "model": "google/antigravity-gemini-3-pro-high",
 
   // MCP proxy for tool discovery
   "mcp": {
