--- a/codex/config.toml
+++ b/codex/config.toml
@@ -52,6 +52,9 @@ trust_level = "untrusted"
 [projects."/Users/tim/dev/pet-new/rackage"]
 trust_level = "trusted"
 
+[projects."/Users/tim/dev/pet-new/test-task"]
+trust_level = "trusted"
+
 [mcp_servers.mcpproxy]
 type = "http"
 url = "http://localhost:8080/mcp/"
