--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -4,9 +4,9 @@
   "plugin": [
     "oh-my-opencode@2.14.0",
     "opencode-openai-codex-auth@4.3.0",
-    "opencode-antigravity-auth@1.2.7",
     "@franlol/opencode-md-table-formatter@0.0.3",
     "@nick-vi/opencode-type-inject@1.3.1",
+    // "opencode-antigravity-auth@1.2.8",
     // "@tarquinen/opencode-dcp@1.0.4",
     // "@zenobius/opencode-background",
     // "opencode-gemini-auth@1.3.6",
@@ -451,7 +451,7 @@
   },
 
   // Default model for OpenCode sessions
-  "model": "openai/gpt-5.2-medium",
+  "model": "openai/gpt-5.2-high",
 
   // MCP proxy for tool discovery
   "mcp": {
