--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -3,11 +3,12 @@
 
   "plugin": [
     "oh-my-opencode@2.14.0",
-    "opencode-openai-codex-auth@4.3.0",
+    // "opencode-openai-codex-auth@4.3.0",
     "@franlol/opencode-md-table-formatter@0.0.3",
     "@nick-vi/opencode-type-inject@1.3.1",
     "@bastiangx/opencode-unmoji@0.3.12",
     "opencode-antigravity-auth@1.2.8",
+    // "@plannotator/opencode@0.4.15",
     // "@tarquinen/opencode-dcp@1.0.4",
     // "@zenobius/opencode-background",
     // "opencode-gemini-auth@1.3.6",
