fix(qutebrowser): resolve Python 3.14/Qt6 crash by updating native builder
- Update Makefile to dynamically detect Python version from Homebrew
- Update qutebrowser-native.m to use correct Qt6 plugin path (/opt/homebrew/share/qt/plugins)
- Rebuild native wrapper binary

--- a/qutebrowser/native-app-builder/Makefile
+++ b/qutebrowser/native-app-builder/Makefile
@@ -7,8 +7,8 @@
 # - Uses embedded Python interpreter for better process identification
 
 # Configuration
-PYTHON_VERSION = 3.14
 HOMEBREW_PREFIX = /opt/homebrew
+PYTHON_VERSION := $(shell $(HOMEBREW_PREFIX)/bin/python3 -c 'import sys; print(f"{sys.version_info.major}.{sys.version_info.minor}")')
 PYTHON_FRAMEWORK = $(HOMEBREW_PREFIX)/opt/python@$(PYTHON_VERSION)/Frameworks/Python.framework/Versions/$(PYTHON_VERSION)
 APP_BUNDLE = /Applications/qutebrowser.app
 BUILD_DIR = build
