--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -4,14 +4,13 @@
   "plugin": [
     "oh-my-opencode@2.14.0",
     // "opencode-openai-codex-auth@4.3.0",
+    // "opencode-antigravity-auth@1.2.8",
+    "opencode-gemini-auth@latest@1.3.7",
+    "@plannotator/opencode@latest",
+    // "@tarquinen/opencode-dcp@1.0.4",
     "@franlol/opencode-md-table-formatter@0.0.3",
     "@nick-vi/opencode-type-inject@1.3.1",
     "@bastiangx/opencode-unmoji@0.3.12",
-    "opencode-antigravity-auth@1.2.8",
-    // "@plannotator/opencode@0.4.15",
-    // "@tarquinen/opencode-dcp@1.0.4",
-    // "@zenobius/opencode-background",
-    // "opencode-gemini-auth@1.3.6",
   ],
 
   // https://opencode.ai/docs/keybinds
@@ -460,6 +459,11 @@
     "mcpproxy": {
       "type": "remote",
       "url": "http://localhost:8080/mcp/",
+    },
+    "playwright": {
+      "type": "local",
+      "command": ["npx", "@playwright/mcp@latest"],
+      "enabled": true,
     },
   },
 }
