--- a/yazi/package.toml
+++ b/yazi/package.toml
@@ -5,12 +5,12 @@ hash = "e519d894e94ded741e06aae4d4775981"
 
 [[plugin.deps]]
 use = "yazi-rs/plugins:no-status"
-rev = "68f7d48"
+rev = "56971d0"
 hash = "3e023d31f29201efdac2a6ae35fedb78"
 
 [[plugin.deps]]
 use = "yazi-rs/plugins:git"
-rev = "68f7d48"
+rev = "56971d0"
 hash = "36a484acf6a0a0219c543ccb4cee218f"
 
 [[plugin.deps]]
@@ -20,23 +20,48 @@ hash = "5805affd3ae8adcb3c72b6997d21c0a6"
 
 [[plugin.deps]]
 use = "yazi-rs/plugins:vcs-files"
-rev = "68f7d48"
+rev = "56971d0"
 hash = "5cfd9b2bd3f8ec4e3245e3426a967f82"
 
 [[plugin.deps]]
 use = "yazi-rs/plugins:zoom"
-rev = "68f7d48"
+rev = "56971d0"
 hash = "a638db397a5a41d3f3a08a7427ccead1"
 
 [[plugin.deps]]
 use = "yazi-rs/plugins:toggle-pane"
-rev = "68f7d48"
+rev = "56971d0"
 hash = "8a7c58225816a163a6e8730c0adafbc8"
 
 [[plugin.deps]]
 use = "MasouShizuka/close-and-restore-tab"
 rev = "5047217"
 hash = "bb24648b1f96f1cef8c1543742189aad"
+
+[[plugin.deps]]
+use = "mikavilpas/easyjump.yazi:easyjump"
+rev = "a8d56e9"
+hash = "dee6991cbf5f04f879be03218856d65"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:piper"
+rev = "56971d0"
+hash = "76ea4ff62db6ebe62e4653c2de95cbd"
+
+[[plugin.deps]]
+use = "alberti42/faster-piper"
+rev = "419c04f"
+hash = "e954f3d314ba732336592101bb47dd03"
+
+[[plugin.deps]]
+use = "Lil-Dank/lazygit"
+rev = "0e56060"
+hash = "ab2e66065a94cca4886b303518e44bd8"
+
+[[plugin.deps]]
+use = "ndtoan96/ouch"
+rev = "594b8a2"
+hash = "c9e628fc0312d198db22ae2fa74883b"
 
 [flavor]
 deps = []
