--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -1,28 +1,45 @@
 {
   "$schema": "https://opencode.ai/config.json",
-
   "plugin": [
-    "oh-my-opencode@2.14.0",
-    // "opencode-openai-codex-auth@4.3.0",
-    // "opencode-antigravity-auth@1.2.8",
-    "opencode-gemini-auth@latest@1.3.7",
-    "@plannotator/opencode@latest",
-    // "@tarquinen/opencode-dcp@1.0.4",
-    "@franlol/opencode-md-table-formatter@0.0.3",
-    "@nick-vi/opencode-type-inject@1.3.1",
-    "@bastiangx/opencode-unmoji@0.3.12",
-  ],
+    // Core
+    "oh-my-opencode",
 
-  // https://opencode.ai/docs/keybinds
+    // Auth
+    "opencode-openai-codex-auth",
+    "opencode-antigravity-auth",
+
+    // Misc
+    "@plannotator/opencode",
+    "@franlol/opencode-md-table-formatter",
+    "@nick-vi/opencode-type-inject",
+    "@bastiangx/opencode-unmoji",
+  ],
+  "mcp": {
+    "mcpproxy": {
+      "type": "remote",
+      "url": "http://localhost:8080/mcp/",
+      "enabled": true,
+    },
+    "playwriter": {
+      "type": "local",
+      "command": ["npx", "-y", "playwriter@latest"],
+      "enabled": true,
+    },
+  },
+  "tui": {
+    "scroll_speed": 3,
+    "scroll_acceleration": {
+      "enabled": true,
+    },
+  },
   "keybinds": {
     "leader": "ctrl+s",
     "app_exit": "ctrl+q",
     "editor_open": "ctrl+e",
   },
-
-  // OpenAI provider + full GPT-5 model presets
   "provider": {
     "openai": {
+      "name": "OpenAI",
       "options": {
         "reasoningEffort": "medium",
         "reasoningSummary": "auto",
@@ -31,8 +48,8 @@
         "store": false,
       },
       "models": {
-        "gpt-5.2-none": {
-          "name": "GPT 5.2 None (OAuth)",
+        "gpt-5.2": {
+          "name": "GPT 5.2 (OAuth)",
           "limit": {
             "context": 272000,
             "output": 128000,
@@ -41,16 +58,36 @@
             "input": ["text", "image"],
             "output": ["text"],
           },
-          "options": {
-            "reasoningEffort": "none",
-            "reasoningSummary": "auto",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
+          "variants": {
+            "none": {
+              "reasoningEffort": "none",
+              "reasoningSummary": "auto",
+              "textVerbosity": "medium",
+            },
+            "low": {
+              "reasoningEffort": "low",
+              "reasoningSummary": "auto",
+              "textVerbosity": "medium",
+            },
+            "medium": {
+              "reasoningEffort": "medium",
+              "reasoningSummary": "auto",
+              "textVerbosity": "medium",
+            },
+            "high": {
+              "reasoningEffort": "high",
+              "reasoningSummary": "detailed",
+              "textVerbosity": "medium",
+            },
+            "xhigh": {
+              "reasoningEffort": "xhigh",
+              "reasoningSummary": "detailed",
+              "textVerbosity": "medium",
+            },
           },
         },
-        "gpt-5.2-low": {
-          "name": "GPT 5.2 Low (OAuth)",
+        "gpt-5.2-codex": {
+          "name": "GPT 5.2 Codex (OAuth)",
           "limit": {
             "context": 272000,
             "output": 128000,
@@ -59,16 +96,31 @@
             "input": ["text", "image"],
             "output": ["text"],
           },
-          "options": {
-            "reasoningEffort": "low",
-            "reasoningSummary": "auto",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
+          "variants": {
+            "low": {
+              "reasoningEffort": "low",
+              "reasoningSummary": "auto",
+              "textVerbosity": "medium",
+            },
+            "medium": {
+              "reasoningEffort": "medium",
+              "reasoningSummary": "auto",
+              "textVerbosity": "medium",
+            },
+            "high": {
+              "reasoningEffort": "high",
+              "reasoningSummary": "detailed",
+              "textVerbosity": "medium",
+            },
+            "xhigh": {
+              "reasoningEffort": "xhigh",
+              "reasoningSummary": "detailed",
+              "textVerbosity": "medium",
+            },
           },
         },
-        "gpt-5.2-medium": {
-          "name": "GPT 5.2 Medium (OAuth)",
+        "gpt-5.1-codex-max": {
+          "name": "GPT 5.1 Codex Max (OAuth)",
           "limit": {
             "context": 272000,
             "output": 128000,
@@ -77,282 +129,27 @@
             "input": ["text", "image"],
             "output": ["text"],
           },
-          "options": {
-            "reasoningEffort": "medium",
-            "reasoningSummary": "auto",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.2-high": {
-          "name": "GPT 5.2 High (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "high",
-            "reasoningSummary": "detailed",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.2-xhigh": {
-          "name": "GPT 5.2 Extra High (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "xhigh",
-            "reasoningSummary": "detailed",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-codex-max-low": {
-          "name": "GPT 5.1 Codex Max Low (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "low",
-            "reasoningSummary": "detailed",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-codex-max-medium": {
-          "name": "GPT 5.1 Codex Max Medium (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "medium",
-            "reasoningSummary": "detailed",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-codex-max-high": {
-          "name": "GPT 5.1 Codex Max High (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "high",
-            "reasoningSummary": "detailed",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-codex-max-xhigh": {
-          "name": "GPT 5.1 Codex Max Extra High (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "xhigh",
-            "reasoningSummary": "detailed",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-codex-low": {
-          "name": "GPT 5.1 Codex Low (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "low",
-            "reasoningSummary": "auto",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-codex-medium": {
-          "name": "GPT 5.1 Codex Medium (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "medium",
-            "reasoningSummary": "auto",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-codex-high": {
-          "name": "GPT 5.1 Codex High (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "high",
-            "reasoningSummary": "detailed",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-codex-mini-medium": {
-          "name": "GPT 5.1 Codex Mini Medium (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "medium",
-            "reasoningSummary": "auto",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-codex-mini-high": {
-          "name": "GPT 5.1 Codex Mini High (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "high",
-            "reasoningSummary": "detailed",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-none": {
-          "name": "GPT 5.1 None (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "none",
-            "reasoningSummary": "auto",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-low": {
-          "name": "GPT 5.1 Low (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "low",
-            "reasoningSummary": "auto",
-            "textVerbosity": "low",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-medium": {
-          "name": "GPT 5.1 Medium (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "medium",
-            "reasoningSummary": "auto",
-            "textVerbosity": "medium",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
-          },
-        },
-        "gpt-5.1-high": {
-          "name": "GPT 5.1 High (OAuth)",
-          "limit": {
-            "context": 272000,
-            "output": 128000,
-          },
-          "modalities": {
-            "input": ["text", "image"],
-            "output": ["text"],
-          },
-          "options": {
-            "reasoningEffort": "high",
-            "reasoningSummary": "detailed",
-            "textVerbosity": "high",
-            "include": ["reasoning.encrypted_content"],
-            "store": false,
+          "variants": {
+            "low": {
+              "reasoningEffort": "low",
+              "reasoningSummary": "detailed",
+              "textVerbosity": "medium",
+            },
+            "medium": {
+              "reasoningEffort": "medium",
+              "reasoningSummary": "detailed",
+              "textVerbosity": "medium",
+            },
+            "high": {
+              "reasoningEffort": "high",
+              "reasoningSummary": "detailed",
+              "textVerbosity": "medium",
+            },
+            "xhigh": {
+              "reasoningEffort": "xhigh",
+              "reasoningSummary": "detailed",
+              "textVerbosity": "medium",
+            },
           },
         },
       },
@@ -361,7 +158,10 @@
       "models": {
         "antigravity-gemini-3-flash": {
           "name": "Gemini 3 Flash (Antigravity)",
-          "limit": { "context": 1048576, "output": 65536 },
+          "limit": {
+            "context": 1048576,
+            "output": 65536,
+          },
           "modalities": {
             "input": ["text", "image", "pdf"],
             "output": ["text"],
@@ -369,7 +169,10 @@
         },
         "antigravity-gemini-3-pro-low": {
           "name": "Gemini 3 Pro Low (Antigravity)",
-          "limit": { "context": 1048576, "output": 65536 },
+          "limit": {
+            "context": 1048576,
+            "output": 65536,
+          },
           "modalities": {
             "input": ["text", "image", "pdf"],
             "output": ["text"],
@@ -377,7 +180,10 @@
         },
         "antigravity-gemini-3-pro-high": {
           "name": "Gemini 3 Pro High (Antigravity)",
-          "limit": { "context": 1048576, "output": 65536 },
+          "limit": {
+            "context": 1048576,
+            "output": 65536,
+          },
           "modalities": {
             "input": ["text", "image", "pdf"],
             "output": ["text"],
@@ -385,7 +191,10 @@
         },
         "antigravity-claude-sonnet-4-5": {
           "name": "Claude Sonnet 4.5 (Antigravity)",
-          "limit": { "context": 200000, "output": 64000 },
+          "limit": {
+            "context": 200000,
+            "output": 64000,
+          },
           "modalities": {
             "input": ["text", "image", "pdf"],
             "output": ["text"],
@@ -393,7 +202,10 @@
         },
         "antigravity-claude-sonnet-4-5-thinking-low": {
           "name": "Claude Sonnet 4.5 Thinking Low (Antigravity)",
-          "limit": { "context": 200000, "output": 64000 },
+          "limit": {
+            "context": 200000,
+            "output": 64000,
+          },
           "modalities": {
             "input": ["text", "image", "pdf"],
             "output": ["text"],
@@ -401,7 +213,10 @@
         },
         "antigravity-claude-sonnet-4-5-thinking-medium": {
           "name": "Claude Sonnet 4.5 Thinking Medium (Antigravity)",
-          "limit": { "context": 200000, "output": 64000 },
+          "limit": {
+            "context": 200000,
+            "output": 64000,
+          },
           "modalities": {
             "input": ["text", "image", "pdf"],
             "output": ["text"],
@@ -409,7 +224,10 @@
         },
         "antigravity-claude-sonnet-4-5-thinking-high": {
           "name": "Claude Sonnet 4.5 Thinking High (Antigravity)",
-          "limit": { "context": 200000, "output": 64000 },
+          "limit": {
+            "context": 200000,
+            "output": 64000,
+          },
           "modalities": {
             "input": ["text", "image", "pdf"],
             "output": ["text"],
@@ -417,7 +235,10 @@
         },
         "antigravity-claude-opus-4-5-thinking-low": {
           "name": "Claude Opus 4.5 Thinking Low (Antigravity)",
-          "limit": { "context": 200000, "output": 64000 },
+          "limit": {
+            "context": 200000,
+            "output": 64000,
+          },
           "modalities": {
             "input": ["text", "image", "pdf"],
             "output": ["text"],
@@ -425,7 +246,10 @@
         },
         "antigravity-claude-opus-4-5-thinking-medium": {
           "name": "Claude Opus 4.5 Thinking Medium (Antigravity)",
-          "limit": { "context": 200000, "output": 64000 },
+          "limit": {
+            "context": 200000,
+            "output": 64000,
+          },
           "modalities": {
             "input": ["text", "image", "pdf"],
             "output": ["text"],
@@ -433,7 +257,10 @@
         },
         "antigravity-claude-opus-4-5-thinking-high": {
           "name": "Claude Opus 4.5 Thinking High (Antigravity)",
-          "limit": { "context": 200000, "output": 64000 },
+          "limit": {
+            "context": 200000,
+            "output": 64000,
+          },
           "modalities": {
             "input": ["text", "image", "pdf"],
             "output": ["text"],
@@ -441,29 +268,16 @@
         },
         "claude-sonnet-4-5": {
           "name": "Claude Sonnet 4.5 (Fallback)",
-          "limit": { "context": 200000, "output": 64000 },
+          "limit": {
+            "context": 200000,
+            "output": 64000,
+          },
           "modalities": {
             "input": ["text", "image", "pdf"],
             "output": ["text"],
           },
         },
       },
-    },
-  },
-
-  // Default model for OpenCode sessions
-  "model": "openai/gpt-5.2-high",
-
-  // MCP proxy for tool discovery
-  "mcp": {
-    "mcpproxy": {
-      "type": "remote",
-      "url": "http://localhost:8080/mcp/",
-    },
-    "playwright": {
-      "type": "local",
-      "command": ["npx", "@playwright/mcp@latest"],
-      "enabled": true,
     },
   },
 }
