config(kitty): update kitty.conf

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -63,6 +63,10 @@ map cmd+а send_key f11
 map cmd+u send_key f12
 map cmd+г send_key f12
 
+# scrollback_pager less -R --no-init --quit-if-one-screen
+# map cmd+g show_scrollback
+# map cmd+п show_scrollback
+
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
